moved email properties information such as emal address to which emails should be sent so seperate properties file

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,7 @@ spedlite:
   email:
     inbox-check-interval-millisec: 600000
     address: XXXXXXXX
+    sourceEmailAdress: XXXXXXXX
     password: XXXXXXXX
+    targetEmailAdress: XXXXXXXX
     filename: Job_Postings.json
-
-
-
-
