--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  <properties>
+  <emailProperties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
+  </emailProperties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
